feat: Add support for query rewriting and scoring model integration